--- a/web/web/Pages/Index.cshtml
+++ b/web/web/Pages/Index.cshtml
@@ -6,6 +6,6 @@
 
 <form method="post">
     Term:
-    <input asp-for="Term"/>
+    <input asp-for="searchString"/>
     <input type="submit" />
 </form>
