--- a/web/web/Pages/Index.cshtml
+++ b/web/web/Pages/Index.cshtml
@@ -5,7 +5,6 @@
 <p>Enter a term:</p>
 
 <form method="post">
-    Term:
     <input asp-for="searchString"/>
-    <input type="submit" />
+    <input type="submit" value="Search"/>
 </form>
