--- a/web/web/Pages/Term.cshtml
+++ b/web/web/Pages/Term.cshtml
@@ -3,6 +3,7 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     var term = (Model.Term)ViewData["term"];
+    var records = (List<Model.Record>)ViewData["records"];
 }
 
 <h2>@term.PrefLabel</h2>
@@ -18,7 +19,7 @@
     </ul>
 }
 
-@if (!string.IsNullOrEmpty(term.ScopeNote))
+@if (!string.IsNullOrEmpty(term.Whakamārama))
 {
     <h6>Whakamārama</h6>
     <ul>
@@ -42,6 +43,27 @@
         @foreach (var label in term.UsedFor)
         {
             <li>@label</li>
+        }
+    </ul>
+}
+
+@if (records.Count() > 0)
+{
+    <h6>Bibliography: Title (ISBN) [Links]</h6>
+    <ul>
+        @foreach (var record in records)
+        {
+            int i = 0;
+            <li>
+                @record.Title
+                @if (!string.IsNullOrEmpty(record.ISBN))
+                {<text> (@record.ISBN) </text>}
+                @foreach (var link in record.Link)
+                {
+                    i++;
+                    @:[<a href=@link>Link @i</a>]
+                }
+            </li>
         }
     </ul>
 }
