validation & error handling

--- a/web/web/Pages/Error.cshtml
+++ b/web/web/Pages/Error.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ErrorModel
 @{
-    ViewData["Title"] = "Error";
+    var message = ViewData["message"];
 }
 
-<h1 class="text-danger">Error.</h1>
+<h1 class="text-danger">@(message??"Error.")</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 @if (Model.ShowRequestId)
@@ -13,6 +13,4 @@
         <strong>Request ID:</strong> <code>@Model.RequestId</code>
     </p>
 }
-
-<h1>No Result!</h1>
 
