--- a/web/web/Pages/Term.cshtml
+++ b/web/web/Pages/Term.cshtml
@@ -29,7 +29,7 @@
 
 @if (!string.IsNullOrEmpty(term.ScopeNote))
 {
-    <h6>Scope Note</h6>
+    <h6>Scope note</h6>
     <ul>
         <li> @term.ScopeNote</li>
     </ul>
