--- a/web/web/Pages/Shared/_Layout.cshtml
+++ b/web/web/Pages/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            N.B. the website is only available from Monday to Friday, 10am - 4pm.
+            Please note that the website is only available from 10am to 4pm on weekdays.
         </div>
     </footer>
 
